--- a/install
+++ b/install
@@ -98,9 +98,9 @@ sudo -u ${RUN_USER} -E -H yo hubot --defaults
 sudo -u ${RUN_USER} -E -H git clone https://github.com/miurahr/hubot-kandan.git       node_modules/hubot-kandan
 sudo -u ${RUN_USER} -E -H git clone https://github.com/robhurring/hubot-redmine.git   node_modules/hubot-redmine
 sudo -u ${RUN_USER} -E -H git clone https://github.com/hubot-scripts/hubot-trello.git node_modules/hubot-trello
-sudo -u ${RUN_USER} -E -H npm install faye@1.0.1
 
 sed -ri 's/"hubot-redis-brain": "0.0.2",/"hubot-kandan": "*","hubot-redmine": "*","hubot-trello": "*",/g'  ${INSTALL_DIR}/hubot/package.json
+sed -ri 's/"hubot-redis-brain",//g' ${INSTALL_DIR}/hubot/external-scripts.json
 sudo -u ${RUN_USER} -E -H npm install
 
 # cleanup dev files
