--- a/install
+++ b/install
@@ -79,15 +79,15 @@ __EOL__
 # Kandan
 #
 # install
+#  checkout i18n branch only
 cd ${INSTALL_DIR}
-sudo -u ${RUN_USER} -E -H git clone https://github.com/miurahr/kandan.git
-cd kandan
-sudo -u ${RUN_USER} -E -H git checkout i18n
+sudo -u ${RUN_USER} -E -H git clone --depth 1 -b i18n --single-branch https://github.com/miurahr/kandan.git
 
-${GEM} install execjs
-${GEM} install mysql2
+${GEM} install execjs --no-document
+${GEM} install mysql2 --no-document
 
 # install gems into kandan/vendor/bundle
+cd ${INSTALL_DIR}/kandan
 sudo -u ${RUN_USER} -E -H ${BUNDLE} install --path vendor/bundle --without development,test
 
 sed -ri 's/config.serve_static_assets = false/config.serve_static_assets = true/g' ${INSTALL_DIR}/kandan/config/environments/production.rb
@@ -109,9 +109,9 @@ cd ${INSTALL_DIR}/hubot
 # sudo -u ${RUN_USER} -E -H yo hubot --defaults
 
 # install kandan adapter and some
-sudo -u ${RUN_USER} -E -H git clone https://github.com/miurahr/hubot-kandan.git       node_modules/hubot-kandan
-sudo -u ${RUN_USER} -E -H git clone https://github.com/robhurring/hubot-redmine.git   node_modules/hubot-redmine
-sudo -u ${RUN_USER} -E -H git clone https://github.com/hubot-scripts/hubot-trello.git node_modules/hubot-trello
+sudo -u ${RUN_USER} -E -H git clone --depth 1 https://github.com/miurahr/hubot-kandan.git       node_modules/hubot-kandan
+sudo -u ${RUN_USER} -E -H git clone --depth 1 https://github.com/robhurring/hubot-redmine.git   node_modules/hubot-redmine
+sudo -u ${RUN_USER} -E -H git clone --depth 1 https://github.com/hubot-scripts/hubot-trello.git node_modules/hubot-trello
 sed -ri 's/"hubot-redis-brain": "0.0.2",/"hubot-kandan": "*","hubot-redmine": "*","hubot-trello": "*",/g'  ${INSTALL_DIR}/hubot/package.json
 sed -ri 's/"hubot-redis-brain",//g' ${INSTALL_DIR}/hubot/external-scripts.json
 
@@ -122,6 +122,7 @@ sudo -u ${RUN_USER} -E -H npm install
 #
 # cleanup dev files
 apt-get -y remove \
+  unzip gcc g++ make curl git-core build-essential \
   libmysqlclient-dev libsqlite3-dev libpq-dev \
   libcurl4-openssl-dev libpcre3-dev libxml2-dev libxslt-dev \
   libreadline-gplv2-dev
