go to stable combination of versions
Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/install
+++ b/install
@@ -67,11 +67,11 @@ __EOL__
 # populate ${HUBOT_CONF}
 cat > ${HUBOT_CONF} <<__EOL__
 [program:hubot]
-command=${INSTALL_DIR}/hubot/bin/hubot -a kandan
+command=${INSTALL_DIR}/hubot-2.4.8/hubot/bin/hubot -a kandan
 autostart=true
 autorestart=false
 username=${RUN_USER}
-directory=${INSTALL_DIR}/hubot
+directory=${INSTALL_DIR}/hubot-2.4.8/hubot
 stdout_logfile=${LOG_DIR}/%(program_name)s.log
 stderr_logfile=${LOG_DIR}/%(program_name)s.log
 __EOL__
@@ -106,23 +106,19 @@ install -d -m 755 -o ${RUN_USER} -g ${RUN_USER} ${INSTALL_DIR}/hubot
 #curl -sL https://github.com/github/hubot/releases/download/v2.6.0/hubot-2.6.0.tar.gz | zcat | (cd ${INSTALL_DIR};sudo -u ${RUN_USER} tar xf -)
 
 # install source from github release
-curl -sL -o /tmp/hubot.zip https://github.com/github/hubot/archive/v2.6.0.zip && sudo -u ${RUN_USER} -E -H unzip /tmp/hubot.zip -d ${INSTALL_DIR} && rm /tmp/hubot.zip
-cd ${INSTALL_DIR}/hubot-2.6.0
+curl -sL -o /tmp/hubot.zip https://github.com/github/hubot/archive/v2.4.8.zip && sudo -u ${RUN_USER} -E -H unzip /tmp/hubot.zip -d ${INSTALL_DIR} && rm /tmp/hubot.zip
+cd ${INSTALL_DIR}/hubot-2.4.8
 sudo -u ${RUN_USER} -E -H npm install
-sudo -u ${RUN_USER} -E -H bin/hubot -c ../hubot
-#rm -rf ${INSTALL_DIR}/hubot-2.6.0
-
-# install dependencies
-cd ${INSTALL_DIR}/hubot
-sudo -u ${RUN_USER} -E -H npm install
+sudo -u ${RUN_USER} -E -H make package
 
 #XX# install by yeoman and hubot generator
 # npm install -g yo generator-hubot
 # sudo -u ${RUN_USER} -E -H yo hubot --defaults
 
+cd ${INSTALL_DIR}/hubot-2.4.8/hubot
 # install kandan adapter and some
-sudo -u ${RUN_USER} -E -H git clone --depth 1 https://github.com/miurahr/hubot-kandan.git       node_modules/hubot-kandan
-sudo -u ${RUN_USER} -E -H npm install faye@0.8.9
+sudo -u ${RUN_USER} -E -H git clone -b stable-1.0 --depth 1  https://github.com/miurahr/hubot-kandan.git node_modules/hubot-kandan
+sudo -u ${RUN_USER} -E -H npm install faye@0.8.2
 #sudo -u ${RUN_USER} -E -H git clone --depth 1 https://github.com/robhurring/hubot-redmine.git   node_modules/hubot-redmine
 #sudo -u ${RUN_USER} -E -H git clone --depth 1 https://github.com/hubot-scripts/hubot-trello.git node_modules/hubot-trello
 #sed -ri 's/"hubot-redis-brain": "0.0.2",/"hubot-kandan": "*","hubot-redmine": "*","hubot-trello": "*",/g'  ${INSTALL_DIR}/hubot/package.json
