use master branch of kandan and hubot
Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/install
+++ b/install
@@ -11,6 +11,7 @@ RUN_USER=${RUN_USER:-app}
 LOG_DIR="/var/log/app"
 KANDAN_CONF=/etc/supervisor/conf.d/kandan.conf
 HUBOT_CONF=/etc/supervisor/conf.d/hubot.conf
+HUBOT_VER=2.12.0
 
 # add user
 useradd -d ${INSTALL_DIR} -m ${RUN_USER}
@@ -67,11 +68,11 @@ __EOL__
 # populate ${HUBOT_CONF}
 cat > ${HUBOT_CONF} <<__EOL__
 [program:hubot]
-command=${INSTALL_DIR}/hubot-2.4.8/hubot/bin/hubot -a kandan
+command=${INSTALL_DIR}/hubot-${HUBOT_VER}/hubot/bin/hubot -a kandan
 autostart=true
 autorestart=false
 username=${RUN_USER}
-directory=${INSTALL_DIR}/hubot-2.4.8/hubot
+directory=${INSTALL_DIR}/hubot-${HUBOT_VER}/hubot
 stdout_logfile=${LOG_DIR}/%(program_name)s.log
 stderr_logfile=${LOG_DIR}/%(program_name)s.log
 __EOL__
@@ -79,11 +80,8 @@ __EOL__
 ############################################
 # Kandan
 #
-# install
-#  checkout kandan-i18n branch only
-#sudo -u ${RUN_USER} -E -H git clone --depth 1 -b kandan-i18n --single-branch https://github.com/miurahr/kandan.git ${INSTALL_DIR}/kandan
-# checkout v1.2-i18n branch only
-sudo -u ${RUN_USER} -E -H git clone --depth 1 -b v1.2-i18n --single-branch https://github.com/miurahr/kandan.git ${INSTALL_DIR}/kandan
+#  checkout kandan-i18n branch
+sudo -u ${RUN_USER} -E -H git clone -b kandan-i18n --single-branch https://github.com/miurahr/kandan.git ${INSTALL_DIR}/kandan
 
 ${GEM} install execjs --no-document
 ${GEM} install mysql2 --no-document
@@ -102,28 +100,25 @@ chown -R ${RUN_USER}:${RUN_USER} ${INSTALL_DIR}
 # install
 install -d -m 755 -o ${RUN_USER} -g ${RUN_USER} ${INSTALL_DIR}/hubot
 
-# install executables from github release
-#curl -sL https://github.com/github/hubot/releases/download/v2.6.0/hubot-2.6.0.tar.gz | zcat | (cd ${INSTALL_DIR};sudo -u ${RUN_USER} tar xf -)
-
 # install source from github release
-curl -sL -o /tmp/hubot.zip https://github.com/github/hubot/archive/v2.4.8.zip && sudo -u ${RUN_USER} -E -H unzip /tmp/hubot.zip -d ${INSTALL_DIR} && rm /tmp/hubot.zip
-cd ${INSTALL_DIR}/hubot-2.4.8
+curl -sL -o /tmp/hubot.zip https://github.com/github/hubot/archive/v${HUBOT_VER}.zip && sudo -u ${RUN_USER} -E -H unzip /tmp/hubot.zip -d ${INSTALL_DIR} && rm /tmp/hubot.zip
+cd ${INSTALL_DIR}/hubot-${HUBOT_VER}
 sudo -u ${RUN_USER} -E -H npm install
+sudo -u ${RUN_USER} -E -H mkdir -p hubot/bin
 sudo -u ${RUN_USER} -E -H make package
 
 #XX# install by yeoman and hubot generator
 # npm install -g yo generator-hubot
 # sudo -u ${RUN_USER} -E -H yo hubot --defaults
 
-cd ${INSTALL_DIR}/hubot-2.4.8/hubot
+cd ${INSTALL_DIR}/hubot-${HUBOT_VER}/hubot
 # install kandan adapter and some
-sudo -u ${RUN_USER} -E -H git clone -b stable-1.0 --depth 1  https://github.com/miurahr/hubot-kandan.git node_modules/hubot-kandan
-sudo -u ${RUN_USER} -E -H npm install faye@0.8.2
-#sudo -u ${RUN_USER} -E -H git clone --depth 1 https://github.com/robhurring/hubot-redmine.git   node_modules/hubot-redmine
-#sudo -u ${RUN_USER} -E -H git clone --depth 1 https://github.com/hubot-scripts/hubot-trello.git node_modules/hubot-trello
-#sed -ri 's/"hubot-redis-brain": "0.0.2",/"hubot-kandan": "*","hubot-redmine": "*","hubot-trello": "*",/g'  ${INSTALL_DIR}/hubot/package.json
-sed -ri 's/"hubot-redis-brain": "0.0.2",/"hubot-kandan": "*",/g'  ${INSTALL_DIR}/hubot/package.json
-sed -ri 's/"hubot-redis-brain",//g' ${INSTALL_DIR}/hubot/external-scripts.json
+sudo -u ${RUN_USER} -E -H git clone https://github.com/miurahr/hubot-kandan.git node_modules/hubot-kandan
+sudo -u ${RUN_USER} -E -H npm install faye
+sudo -u ${RUN_USER} -E -H git clone --depth 1 https://github.com/robhurring/hubot-redmine.git   node_modules/hubot-redmine
+sudo -u ${RUN_USER} -E -H git clone --depth 1 https://github.com/hubot-scripts/hubot-trello.git node_modules/hubot-trello
+sed -ri 's/"hubot-redis-brain": "0.0.2",/"hubot-kandan": "*","hubot-redmine": "*","hubot-trello": "*",/g'  ${INSTALL_DIR}/hubot-${HUBOT_VER}hubot/package.json
+sed -ri 's/"hubot-redis-brain",//g' ${INSTALL_DIR}/hubot-${HUBOT_VER}/hubot/external-scripts.json
 
 # install all dependencies
 sudo -u ${RUN_USER} -E -H npm install
@@ -131,15 +126,15 @@ sudo -u ${RUN_USER} -E -H npm install
 ##############################################
 #
 # cleanup dev files
-apt-get -y remove \
-  unzip gcc g++ make build-essential \
-  libmysqlclient-dev libsqlite3-dev libpq-dev \
-  libcurl4-openssl-dev libpcre3-dev libxml2-dev libxslt-dev \
-  libreadline-gplv2-dev
+#apt-get -y remove \
+#  unzip gcc g++ make build-essential \
+#  libmysqlclient-dev libsqlite3-dev libpq-dev \
+#  libcurl4-openssl-dev libpcre3-dev libxml2-dev libxslt-dev \
+#  libreadline-gplv2-dev
 
 # clean apt caches and more
 apt-get clean
 apt-get -y autoremove
-find /var/lib/apt/lists/ -type f -exec rm -f {} \;
+#find /var/lib/apt/lists/ -type f -exec rm -f {} \;
 
 exit 0
