--- a/install
+++ b/install
@@ -99,14 +99,12 @@ chown -R ${RUN_USER}:${RUN_USER} ${INSTALL_DIR}
 #############################################
 # Hubot
 #
-# install
-install -d -m 755 -o ${RUN_USER} -g ${RUN_USER} ${INSTALL_DIR}/hubot
-
 # install source from github release
 curl -sL -o /tmp/hubot.zip https://github.com/github/hubot/archive/v2.4.8.zip && sudo -u ${RUN_USER} -E -H unzip /tmp/hubot.zip -d ${INSTALL_DIR} && rm /tmp/hubot.zip
 cd ${INSTALL_DIR}/hubot-2.4.8
+install -d -m 755 -o ${RUN_USER} -g ${RUN_USER} ${INSTALL_DIR}/hubot-2.4.8/hubot
+
 sudo -u ${RUN_USER} -E -H npm install
-sudo -u ${RUN_USER} -E -H mkdir -p hubot/bin
 sudo -u ${RUN_USER} -E -H make package
 
 #XX# install by yeoman and hubot generator
@@ -120,8 +118,8 @@ sudo -u ${RUN_USER} -E -H npm install faye@0.8.2
 #sudo -u ${RUN_USER} -E -H git clone --depth 1 https://github.com/robhurring/hubot-redmine.git   node_modules/hubot-redmine
 #sudo -u ${RUN_USER} -E -H git clone --depth 1 https://github.com/hubot-scripts/hubot-trello.git node_modules/hubot-trello
 #sed -ri 's/"hubot-redis-brain": "0.0.2",/"hubot-kandan": "*","hubot-redmine": "*","hubot-trello": "*",/g'  ${INSTALL_DIR}/hubot/package.json
-sed -ri 's/"hubot-redis-brain": "0.0.2",/"hubot-kandan": "*",/g'  ${INSTALL_DIR}/hubot/package.json
-sed -ri 's/"hubot-redis-brain",//g' ${INSTALL_DIR}/hubot/external-scripts.json
+sed -ri 's/"hubot-redis-brain": "0.0.2",/"hubot-kandan": "*",/g'  ${INSTALL_DIR}/hubot-2.4.8/hubot/package.json
+sed -ri 's/"hubot-redis-brain",//g' ${INSTALL_DIR}/hubot-2.4.8/hubot/external-scripts.json
 
 # install all dependencies
 sudo -u ${RUN_USER} -E -H npm install
