--- a/install
+++ b/install
@@ -67,11 +67,11 @@ __EOL__
 # populate ${HUBOT_CONF}
 cat > ${HUBOT_CONF} <<__EOL__
 [program:hubot]
-command=${INSTALL_DIR}/hubot-2.4.8/hubot/bin/hubot -a kandan
+command=${INSTALL_DIR}/hubot-2.4.7/hubot/bin/hubot -a kandan
 autostart=true
 autorestart=false
 username=${RUN_USER}
-directory=${INSTALL_DIR}/hubot-2.4.8/hubot
+directory=${INSTALL_DIR}/hubot-2.4.7/hubot
 stdout_logfile=${LOG_DIR}/%(program_name)s.log
 stderr_logfile=${LOG_DIR}/%(program_name)s.log
 __EOL__
@@ -100,9 +100,9 @@ chown -R ${RUN_USER}:${RUN_USER} ${INSTALL_DIR}
 # Hubot
 #
 # install source from github release
-curl -sL -o /tmp/hubot.zip https://github.com/github/hubot/archive/v2.4.8.zip && sudo -u ${RUN_USER} -E -H unzip /tmp/hubot.zip -d ${INSTALL_DIR} && rm /tmp/hubot.zip
-cd ${INSTALL_DIR}/hubot-2.4.8
-install -d -m 755 -o ${RUN_USER} -g ${RUN_USER} ${INSTALL_DIR}/hubot-2.4.8/hubot
+curl -sL -o /tmp/hubot.zip https://github.com/github/hubot/archive/v2.4.7.zip && sudo -u ${RUN_USER} -E -H unzip /tmp/hubot.zip -d ${INSTALL_DIR} && rm /tmp/hubot.zip
+cd ${INSTALL_DIR}/hubot-2.4.7
+install -d -m 755 -o ${RUN_USER} -g ${RUN_USER} ${INSTALL_DIR}/hubot-2.4.7/hubot
 
 sudo -u ${RUN_USER} -E -H npm install
 sudo -u ${RUN_USER} -E -H make package
@@ -111,15 +111,16 @@ sudo -u ${RUN_USER} -E -H make package
 # npm install -g yo generator-hubot
 # sudo -u ${RUN_USER} -E -H yo hubot --defaults
 
-cd ${INSTALL_DIR}/hubot-2.4.8/hubot
+cd ${INSTALL_DIR}/hubot-2.4.7/hubot
+sudo -u ${RUN_USER} cp /opt/package.json ./package.json
 # install kandan adapter and some
 sudo -u ${RUN_USER} -E -H git clone -b stable-1.0 --depth 1  https://github.com/miurahr/hubot-kandan.git node_modules/hubot-kandan
 sudo -u ${RUN_USER} -E -H npm install faye@0.8.11
 #sudo -u ${RUN_USER} -E -H git clone --depth 1 https://github.com/robhurring/hubot-redmine.git   node_modules/hubot-redmine
 #sudo -u ${RUN_USER} -E -H git clone --depth 1 https://github.com/hubot-scripts/hubot-trello.git node_modules/hubot-trello
 #sed -ri 's/"hubot-redis-brain": "0.0.2",/"hubot-kandan": "*","hubot-redmine": "*","hubot-trello": "*",/g'  ${INSTALL_DIR}/hubot/package.json
-sed -ri 's/"hubot-redis-brain": "0.0.2",/"hubot-kandan": "*",/g'  ${INSTALL_DIR}/hubot-2.4.8/hubot/package.json
-sed -ri 's/"hubot-redis-brain",//g' ${INSTALL_DIR}/hubot-2.4.8/hubot/external-scripts.json
+sed -ri 's/"hubot-redis-brain": "0.0.2",/"hubot-kandan": "*",/g'  ${INSTALL_DIR}/hubot-2.4.7/hubot/package.json
+sed -ri 's/"hubot-redis-brain",//g' ${INSTALL_DIR}/hubot-2.4.7/hubot/external-scripts.json
 
 # install all dependencies
 sudo -u ${RUN_USER} -E -H npm install
