--- a/install
+++ b/install
@@ -116,11 +116,15 @@ sudo -u ${RUN_USER} cp /opt/package.json ./package.json
 # install kandan adapter and some
 sudo -u ${RUN_USER} -E -H git clone -b stable-1.0 --depth 1  https://github.com/miurahr/hubot-kandan.git node_modules/hubot-kandan
 sudo -u ${RUN_USER} -E -H npm install faye@0.8.11
+sudo -u ${RUN_USER} -E -H npm install ntwitter
 #sudo -u ${RUN_USER} -E -H git clone --depth 1 https://github.com/robhurring/hubot-redmine.git   node_modules/hubot-redmine
 #sudo -u ${RUN_USER} -E -H git clone --depth 1 https://github.com/hubot-scripts/hubot-trello.git node_modules/hubot-trello
 #sed -ri 's/"hubot-redis-brain": "0.0.2",/"hubot-kandan": "*","hubot-redmine": "*","hubot-trello": "*",/g'  ${INSTALL_DIR}/hubot/package.json
 sed -ri 's/"hubot-redis-brain": "0.0.2",/"hubot-kandan": "*","ntwitter": "*",/g'  ${INSTALL_DIR}/hubot-2.4.7/hubot/package.json
 sed -ri 's/"redis-brain.coffee",//g' ${INSTALL_DIR}/hubot-2.4.7/hubot/hubot-scripts.json
+
+# supervisor cannot control status dependency. we insert sleep for waiting kandan become up
+sed -ri 's/npm install/sleep 10 && npm install/g' ${INSTALL_DIR}/hubot-2.4.7/hubot/bin/hubot
 
 # install all dependencies
 sudo -u ${RUN_USER} -E -H npm install
