--- a/install
+++ b/install
@@ -4,7 +4,7 @@ set -e
 . /etc/profile.d/rbenv.sh
 BUNDLE=`which bundle`
 GEM=`which gem`
-. /opt/build-config
+. /opt/kandan-hubot/build-config
 
 INSTALL_DIR=${INSTALL_DIR:-/home/app}
 RUN_USER=${RUN_USER:-app}
@@ -117,10 +117,11 @@ sudo -u ${RUN_USER} -E -H git clone https://github.com/miurahr/hubot-kandan.git 
 sudo -u ${RUN_USER} -E -H npm install faye@1.0.1
 sudo -u ${RUN_USER} -E -H npm install ntwitter
 sudo -u ${RUN_USER} -E -H npm install node-trello
-sudo -u ${RUN_USER} -E -H git clone --depth 1 https://github.com/robhurring/hubot-redmine.git   node_modules/hubot-redmine
+sudo -u ${RUN_USER} -E -H git clone --depth 1 https://github.com/miurahr/hubot-redmine.git   node_modules/hubot-redmine
 sudo -u ${RUN_USER} -E -H git clone --depth 1 https://github.com/hubot-scripts/hubot-trello.git node_modules/hubot-trello
 sed -ri 's/"hubot-redis-brain": "0.0.2",/"hubot-redis-brain": "0.0.2","ntwitter": "*","hubot-kandan": "*","hubot-redmine": "*","hubot-trello": "*",/g'  ${INSTALL_DIR}/hubot/package.json
 sed -ri 's/"hubot-redis-brain",/"hubot-redis-brain",\n    "hubot-redmine",\n    "hubot-trello",\n    /g' ${INSTALL_DIR}/hubot/external-scripts.json
+sed -ri 's/"hubot-heroku-keepalive",//' ${INSTALL_DIR}/hubot/external-scripts.json
 
 # supervisor cannot control status dependency. we insert sleep for waiting kandan become up
 sed -ri 's/^set -e/set -e\nsleep 10/' ${INSTALL_DIR}/hubot/bin/hubot
