hubot script to wait kandan up
- avoid npm bug 'never call cb()'

Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/install
+++ b/install
@@ -38,7 +38,7 @@ apt-get -y install nodejs \
   libcurl4-openssl-dev libpcre3-dev libxml2-dev libxslt-dev \
   libreadline-gplv2-dev libcxxtools-dev
 # update npm
-npm update -g npm
+npm install -g npm@latest
 npm install -g coffee-script
 
 ##################################
@@ -118,6 +118,7 @@ install -d -m 755 -o ${RUN_USER} -g ${RUN_USER} ${INSTALL_DIR}/hubot
 
 # install by yeoman and hubot generator
 cd ${INSTALL_DIR}/hubot
+npm cache clean
 npm install -g yo generator-hubot
 sudo -u ${RUN_USER} -E -H yo hubot --defaults
 
@@ -132,8 +133,27 @@ sed -ri 's/"hubot-redis-brain": "0.0.2",/"hubot-redis-brain": "0.0.2","ntwitter"
 sed -ri 's/"hubot-redis-brain",/"hubot-redis-brain",\n    "hubot-redmine",\n    "hubot-trello",\n    /g' ${INSTALL_DIR}/hubot/external-scripts.json
 sed -ri 's/"hubot-heroku-keepalive",//' ${INSTALL_DIR}/hubot/external-scripts.json
 
-# supervisor cannot control status dependency. we insert sleep for waiting kandan become up
-sed -ri 's/^set -e/set -e\nsleep 10/' ${INSTALL_DIR}/hubot/bin/hubot
+# supervisor cannot control status dependency. Hubot will wait kandan up
+cat > /tmp/hubot <<_EOF_
+#!/bin/sh
+set -e
+timeout=60
+echo -n "Waiting for kandan server to accept connections"
+while ! curl -s http://localhost:3000/ >/dev/null 2>&1
+do
+  timeout=$(expr $timeout - 1)
+  if [ $timeout -eq 0 ]; then
+    echo -e "\nCould not connect to kandan server. Aborting..."
+    exit 1
+  fi
+  echo -n "."
+  sleep 1
+done
+echo
+_EOF_
+tail -n +4  ${INSTALL_DIR}/hubot/bin/hubot >> /tmp/hubot
+mv ${INSTALL_DIR}/hubot/bin/hubot ${INSTALL_DIR}/hubot/bin/hubot.org
+install -o ${RUN_USER} -g ${RUN_USER} -m 755 /tmp/hubot ${INSTALL_DIR}/hubot/bin/hubot
 
 # install all dependencies
 sudo -u ${RUN_USER} -E -H npm install
