add hubot-redmine-notifier plugin
Signed-off-by: miurahr <miurahr@miurahr-external.localnet>

--- a/install
+++ b/install
@@ -129,8 +129,8 @@ sudo -u ${RUN_USER} -E -H npm install ntwitter
 sudo -u ${RUN_USER} -E -H npm install node-trello
 sudo -u ${RUN_USER} -E -H git clone --depth 1 https://github.com/miurahr/hubot-redmine.git   node_modules/hubot-redmine
 sudo -u ${RUN_USER} -E -H git clone --depth 1 https://github.com/hubot-scripts/hubot-trello.git node_modules/hubot-trello
-sed -ri 's/"hubot-redis-brain": "0.0.2",/"hubot-redis-brain": "0.0.2","ntwitter": "*","hubot-kandan": "*","hubot-redmine": "*","hubot-trello": "*",/g'  ${INSTALL_DIR}/hubot/package.json
-sed -ri 's/"hubot-redis-brain",/"hubot-redis-brain",\n    "hubot-redmine",\n    "hubot-trello",\n    /g' ${INSTALL_DIR}/hubot/external-scripts.json
+sed -ri 's/"hubot-redis-brain": "0.0.2",/"hubot-redis-brain": "0.0.2","ntwitter": "*","hubot-kandan": "*","hubot-redmine": "*","hubot-redmine-notifier": "*","hubot-trello": "*",/g'  ${INSTALL_DIR}/hubot/package.json
+sed -ri 's/"hubot-redis-brain",/"hubot-redis-brain",\n    "hubot-redmine",\n     "hubot-redmine-notifier",\n   "hubot-trello",\n    /g' ${INSTALL_DIR}/hubot/external-scripts.json
 sed -ri 's/"hubot-heroku-keepalive",//' ${INSTALL_DIR}/hubot/external-scripts.json
 
 # replace hubot launch script.
